[gd_scene load_steps=8 format=3 uid="uid://cjew08elm562t"]

[ext_resource type="Script" uid="uid://knupv61sxrr0" path="res://gui/statistics/fps_counter.gd" id="1_ioifv"]
[ext_resource type="Theme" uid="uid://bh0is5cj4ulq2" path="res://gui/theme/gui_theme.tres" id="1_n360k"]
[ext_resource type="Script" uid="uid://buwi3r1o6ps6s" path="res://gui/statistics/b_counter.gd" id="2_q46mf"]
[ext_resource type="Script" uid="uid://cpa6xj35vb43o" path="res://gui/gui.gd" id="3_q46mf"]
[ext_resource type="PackedScene" uid="uid://bf7p8kgbqyedn" path="res://gui/menus/settings_menus/pause_menu/pause_menu.tscn" id="3_ytf3d"]
[ext_resource type="PackedScene" uid="uid://g0d4m1l14sq0" path="res://gui/menus/inventory_menu/inventory_menu.tscn" id="4_ytf3d"]
[ext_resource type="PackedScene" uid="uid://c6l3ck41ofphw" path="res://gui/menus/dialog_menu/dialog_menu.tscn" id="5_bk7cs"]

[node name="Gui" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_n360k")
script = ExtResource("3_q46mf")

[node name="InventoryMenu" parent="." instance=ExtResource("4_ytf3d")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="PauseMenu" parent="." node_paths=PackedStringArray("_swap_map") instance=ExtResource("3_ytf3d")]
unique_name_in_owner = true
layout_mode = 1
mouse_filter = 1
_swap_map = {
NodePath("MenuContainer/ScrollContainer/VBoxContainer/ControlsButton"): NodePath("ControlsMenu"),
NodePath("MenuContainer/ScrollContainer/VBoxContainer/QuitButton"): NodePath("QuitMenu"),
NodePath("MenuContainer/ScrollContainer/VBoxContainer/VisualsButton"): NodePath("VisualsMenu")
}

[node name="Background" type="ColorRect" parent="PauseMenu"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.08, 0, 0.00933334, 0.419608)

[node name="DialogMenu" parent="." instance=ExtResource("5_bk7cs")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="FpsCounter" type="Label" parent="."]
layout_mode = 1
offset_left = 3.0
offset_right = 43.0
offset_bottom = 23.0
text = "0"
script = ExtResource("1_ioifv")

[node name="BCounter" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -330.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Seconds since the \"B\" key has been pressed: %d"
script = ExtResource("2_q46mf")
